add sound and confetti

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
 </head>
 <body>
@@ -30,7 +31,7 @@
         </div>
     </div>
 
-    <button class="btn btn-dark" id="resetGame">Reset Game / Play Again</button>
+    <button class="btn btn-dark m-5" id="resetGame">Reset Game / Play Again</button>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
