styling, bootstrap modal component

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -33,6 +33,17 @@
 
     <button class="btn btn-dark m-5" id="resetGame">Reset Game / Play Again</button>
 
+    <div class="modal fade bd-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                Don't you just <em>love</em> confetti?!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-dismiss="modal">I do love confetti!</button>
+            </div>
+        </div>
+    </div>
+
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="tictactoe.js"></script>
